fix: up z-index to content stage card

--- a/styles/blocks/stages.css
+++ b/styles/blocks/stages.css
@@ -29,7 +29,7 @@
 }
 
 .stage__card-text {
-    z-index: 1;
+    z-index: 2;
     position: relative;
     display: flex;
     gap: 16px;
